force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <label>Voucher</label>
    <nameField>
        <displayFormat>VCH-{00000}</displayFormat>
        <label>Voucher Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>