force-app/main/default/objects/Voucher__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder Sponsored Vouchers</relationshipLabel>
    <relationshipName>BuilderSponsoredVouchers</relationshipName>
    <type>Lookup</type>
</CustomField>