force-app/main/default/objects/Voucher__c/fields/Builder_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Builder_Invoice_Date__c</fullName>
    <label>Builder Invoice Date</label>
    <type>Date</type>
</CustomField>