force-app/main/default/objects/Voucher__c/fields/Builder_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Builder_Invoice_Number__c</fullName>
    <label>Builder Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>