force-app/main/default/objects/Voucher__c/fields/Builder_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Builder_Invoice_Status__c</fullName>
    <label>Builder Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ready to Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>