force-app/main/default/objects/Voucher__c/fields/Builder_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Builder_Paid_Date__c</fullName>
    <label>Builder Paid Date</label>
    <type>Date</type>
</CustomField>