force-app/main/default/objects/Voucher__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community context for voucher validation, builder sponsor reporting, and lot-based enforcement.</description>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>