force-app/main/default/objects/Voucher__c/fields/Eligible_Packages__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Packages__c</fullName>
    <label>Eligible Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Entertainer</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Design Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>