force-app/main/default/objects/Voucher__c/fields/Eligible_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eligible Vouchers</relationshipLabel>
    <relationshipName>EligibleVouchers</relationshipName>
    <type>Lookup</type>
</CustomField>