force-app/main/default/objects/Voucher__c/fields/Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Face_Value__c</fullName>
    <label>Face Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>