force-app/main/default/objects/Voucher__c/fields/Finance_Exception_Approved__c.field-meta.xml
<CustomField>
    <fullName>Finance_Exception_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Exception Approved</label>
    <type>Checkbox</type>
</CustomField>