force-app/main/default/objects/Voucher__c/fields/Finance_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Exception_Notes__c</fullName>
    <label>Finance Exception Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>