force-app/main/default/objects/Voucher__c/fields/Homeowner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>