force-app/main/default/objects/Voucher__c/fields/Homeowner_Property__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the voucher to the ODL homeowner property identity record used for voucher identity, lot enforcement, and homeowner proof.</description>
    <label>Homeowner Property</label>
    <referenceTo>Homeowner_Property__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>