force-app/main/default/objects/Voucher__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary one-voucher-per-lot enforcement key for ODL Lennar vouchers.</description>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>