force-app/main/default/objects/Voucher__c/fields/LOVING_Marketing_Cost__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Marketing_Cost__c</fullName>
    <label>LOVING Marketing Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>