force-app/main/default/objects/Voucher__c/fields/Minimum_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Project_Value__c</fullName>
    <label>Minimum Project Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>