force-app/main/default/objects/Voucher__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true automatically when: builder account is ambiguous or could not be confidently matched, duplicate voucher detected for same lot/property/address, or claim validation fails. Routes to review queue. Clear only after review is complete.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>