force-app/main/default/objects/Voucher__c/fields/Recommended_Upsells__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Upsells__c</fullName>
    <label>Recommended Upsells</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Entertainer</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Design Build</fullName>
            </value>
            <value>
                <fullName>Deluxe Grilling Island Upgrade</fullName>
            </value>
            <value>
                <fullName>Premium Countertop</fullName>
            </value>
            <value>
                <fullName>Appliance Upgrade</fullName>
            </value>
            <value>
                <fullName>Access Door / Storage Upgrade</fullName>
            </value>
            <value>
                <fullName>Ventilation Package</fullName>
            </value>
            <value>
                <fullName>Gas Line / Propane Setup</fullName>
            </value>
            <value>
                <fullName>Electrical Ignition / Outlet</fullName>
            </value>
            <value>
                <fullName>Seating Wall</fullName>
            </value>
            <value>
                <fullName>Grill Surround Expansion</fullName>
            </value>
            <value>
                <fullName>Paver Patio Expansion</fullName>
            </value>
            <value>
                <fullName>Fire Pit</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Landscape Lighting</fullName>
            </value>
            <value>
                <fullName>Privacy Plantings</fullName>
            </value>
            <value>
                <fullName>Irrigation Repair / Adjustment</fullName>
            </value>
            <value>
                <fullName>Drainage Correction</fullName>
            </value>
            <value>
                <fullName>Sod Refresh</fullName>
            </value>
            <value>
                <fullName>Outdoor Seating Area</fullName>
            </value>
            <value>
                <fullName>Pergola / Shade Feature</fullName>
            </value>
            <value>
                <fullName>Walkway Connection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>