force-app/main/default/objects/Voucher__c/fields/Redeemed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Redeemed Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>