force-app/main/default/objects/Voucher__c/fields/Redemption_Notes__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Notes__c</fullName>
    <label>Redemption Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>