force-app/main/default/objects/Voucher__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Code</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Duplicate Use</fullName>
            </value>
            <value>
                <fullName>Ineligible Package</fullName>
            </value>
            <value>
                <fullName>Outside Service Area</fullName>
            </value>
            <value>
                <fullName>Minimum Project Value Not Met</fullName>
            </value>
            <value>
                <fullName>Already Redeemed</fullName>
            </value>
            <value>
                <fullName>Cancelled by Builder</fullName>
            </value>
            <value>
                <fullName>Cancelled by Homeowner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>