force-app/main/default/objects/Voucher__c/fields/Reserved_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>