force-app/main/default/objects/Voucher__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <description>Auto-populated when Needs_Review__c is set. Describes why the voucher requires review: ambiguous builder account match, duplicate lot/property detected, invalid claim data, or other exception. Do not clear without resolving the issue.</description>
    <label>Review Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>