force-app/main/default/objects/Voucher__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Applied to Quote</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Deposit Paid</fullName>
            </value>
            <value>
                <fullName>Builder Invoice Pending</fullName>
            </value>
            <value>
                <fullName>Builder Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid by Builder</fullName>
            </value>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>