force-app/main/default/objects/Voucher__c/fields/Upsell_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell Eligible</label>
    <type>Checkbox</type>
</CustomField>