force-app/main/default/objects/Voucher__c/fields/Upsell_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Outcome__c</fullName>
    <label>Upsell Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Routed to Design Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>