force-app/main/default/objects/Voucher__c/fields/Upsell_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell Recommended</label>
    <type>Checkbox</type>
</CustomField>