force-app/main/default/objects/Voucher__c/fields/Upsell_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Revenue__c</fullName>
    <label>Upsell Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>