force-app/main/default/objects/Voucher__c/fields/Voucher_Attach_Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Attach_Rate_Category__c</fullName>
    <label>Voucher Attach Rate Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher Only</fullName>
                <default>true</default>
                <label>Voucher Only</label>
            </value>
            <value>
                <fullName>Voucher + Package Upgrade</fullName>
            </value>
            <value>
                <fullName>Voucher + Add-Ons</fullName>
            </value>
            <value>
                <fullName>Voucher + Design Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>