force-app/main/default/objects/Voucher__c/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <externalId>true</externalId>
    <label>Voucher Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>