force-app/main/default/objects/Voucher__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Grilling Island</fullName>
                <default>true</default>
                <label>Standard Grilling Island</label>
            </value>
            <value>
                <fullName>Deluxe Grilling Island Upgrade</fullName>
            </value>
            <value>
                <fullName>Dollar Credit</fullName>
            </value>
            <value>
                <fullName>Percent Discount</fullName>
            </value>
            <value>
                <fullName>Package Upgrade</fullName>
            </value>
            <value>
                <fullName>Closing Gift</fullName>
            </value>
            <value>
                <fullName>Model Home Offer</fullName>
            </value>
            <value>
                <fullName>Community Buyer Offer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>