force-app/main/default/objects/Voucher__c/validationRules/Builder_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Account_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Builder_Account__c)</errorConditionFormula>
    <errorMessage>Builder Account is required for Lennar vouchers.</errorMessage>
</ValidationRule>