force-app/main/default/objects/Voucher__c/validationRules/Builder_Paid_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Paid_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Paid by Builder&quot;),
ISBLANK(Builder_Paid_Date__c)
)</errorConditionFormula>
    <errorMessage>Builder Paid Date is required when Voucher Status is Paid by Builder.</errorMessage>
</ValidationRule>