force-app/main/default/objects/Voucher__c/validationRules/Builder_Payment_Required_To_Redeem.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Payment_Required_To_Redeem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Redeemed&quot;),
NOT(Finance_Exception_Approved__c),
NOT(ISPICKVAL(Builder_Invoice_Status__c, &quot;Paid&quot;))
)</errorConditionFormula>
    <errorMessage>Builder payment must be completed, or a finance exception approved, before a Lennar voucher can be redeemed.</errorMessage>
</ValidationRule>