force-app/main/default/objects/Voucher__c/validationRules/Invoice_Number_And_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Number_And_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Builder Invoiced&quot;),
OR(
ISBLANK(Builder_Invoice_Number__c),
ISBLANK(Builder_Invoice_Date__c)
)
)</errorConditionFormula>
    <errorMessage>Builder Invoice Number and Builder Invoice Date are required when Voucher Status is Builder Invoiced.</errorMessage>
</ValidationRule>