force-app/main/default/objects/Voucher__c/validationRules/Opportunity_And_Quote_Required_To_Redeem.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_And_Quote_Required_To_Redeem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Redeemed&quot;),
OR(
ISBLANK(Reserved_Opportunity__c),
ISBLANK(Redeemed_Quote__c)
)
)</errorConditionFormula>
    <errorMessage>Redeemed vouchers require both a linked Opportunity and a linked Quote.</errorMessage>
</ValidationRule>