force-app/main/default/objects/Voucher__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Rejected&quot;),
ISBLANK(TEXT(Rejection_Reason__c))
)</errorConditionFormula>
    <errorMessage>Rejected vouchers require a Rejection Reason.</errorMessage>
</ValidationRule>